<resources>
    <string name="app_name">CariFoto</string>
    <string name="favorite">Favorite</string>
    <string name="visit_in_browser">Visit</string>
    <string name="download">Download</string>
    <string name="contentdescription">ContentDescription</string>
    <string name="description">Description</string>
    <string name="share">Share</string>
    <string name="hasil_pencarian">Hasil: %1$s</string>
    <string name="title">Title</string>
    <string name="cari_foto">Cari Foto</string>
    <string name="home">Home</string>
    <string name="not_found">Not Found</string>
    <string name="error_connection">Error Connection</string>
    <string name="loading">Loading...</string>
    <string name="no_data">No Data</string>
    <string name="zoom_preview">Zoom Preview</string>
    <string name="list_favorite">List Favorite</string>
    <string name="no_favorite_data">No Favorite Data</string>
</resources>